// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/presets/github fetchJSONFile() returns JSON 1`] = `
Object {
  "from": "api",
}
`;

exports[`config/presets/github fetchJSONFile() returns renovate internal 1`] = `
Object {
  "from": "www",
}
`;
